        - [API break] Removed 'set_short_alias_for_uri' subroutine.
        - [API break] Removed 'set_long_alias_for_uri' subroutine.
    - System:
      - State:
        - Consider all packages except in states 'not-installed' and
          'config-files' as installed. They are full-right participants of
          dependency and worker management.
    - Config:
      - New option 'cupt::resolver::quality-bar'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Wed, 02 Sep 2009 14:13:54 +0300

cupt (0.6.4) unstable; urgency=low

  * Cupt:
    - Config:
      - Recognize new APT 'acquire::compressiontypes::*' variables.
    - Download:
      - Methods/Curl:
        - Delete partially downloaded file and restart download if the server
          don't support resuming. Thanks to Bernd Zeimetz. (Closes: #544186)
    - System:
      - Resolvers/Native:
        - Display descriptive error message when manually selected version of
          package cannot be updated because of the option
          'cupt::resolver::synchronize-source-versions' set to 'hard'.
        - Don't fail to synchronize already sticked binary package with the
          same source version.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Mon, 31 Aug 2009 23:59:45 +0300

cupt (0.6.3) unstable; urgency=medium

  * cupt:
    - Don't crash on actions confirmation when the user answer is not
      available (end of file, read error etc.)
  * Cupt:
    - Download:
      - Methods/Curl:
        - Enable sharing cookies database and DNS cache for multiple
          downloads.
    - System:
      - Resolvers/Native:
        - Fixed a very tricky regression since 0.6.0 with passing status of
          packages to worker that causes the situation that some of
          automatically installed packages are not marked as such. If you
          installed something big with 0.6.{0-2} libcupt-perl versions, you
          will need to go and mark needed packages as automatically installed